--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="account_login">Login with an existing account</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="welcome">Welcome!!</string>
+    <string name="resume">This is a shoe store, you are surprised at what to find</string>
+    <string name="start">Start</string>
 </resources>
