--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="welcome">Welcome!!</string>
     <string name="resume">This is a shoe store, you are surprised at what to find</string>
     <string name="start">Start</string>
+    <string name="instructions">- Instruction one \n\n-Instruction two\n\n-Instruction three</string>
+    <string name="view_list">View Shoe List</string>
 </resources>
