--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="start">Start</string>
     <string name="instructions">- Instruction one \n\n-Instruction two\n\n-Instruction three</string>
     <string name="view_list">View Shoes</string>
+    <string name="shoe_title">Shoes</string>
 </resources>
