Added Logout menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="instructions">- Instruction one \n\n-Instruction two\n\n-Instruction three</string>
     <string name="view_list">View Shoes</string>
     <string name="shoe_title">Shoes</string>
+    <string name="logout">Logout</string>
 </resources>
